Code/myparser.output
Terminals unused in grammar

   KW_
   KW_OR
   RD_STR
   RD_INT
   RD_REAL
   WR_STR
   WR_INT
   WR_REAL
   KW_OROR
   NOT
   FACTOR
   RELATION


Grammar

    0 $accept: header_jobs $end

    1 programm: external_declaration
    2         | programm external_declaration

    3 header: %empty

    4 external_declaration: functions_declaration
    5                     | declarations

    6 header_jobs: header programm KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
    7            | header KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END

    8 functions_declaration: type IDENTIFIERS OPEN_PAR function_parameters CLOSE_PAR KW_BEGIN code KW_END
    9                      | type IDENTIFIERS OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END

   10 code: instr
   11     | code instr

   12 instr: assign_cmd erotimatiko
   13      | erotimatiko
   14      | declarations
   15      | KW_RETURN expr erotimatiko
   16      | KW_CONT erotimatiko
   17      | KW_BREAK erotimatiko
   18      | KW_BEGIN ci KW_END
   19      | call_function erotimatiko
   20      | cmd

   21 cmd: if_stmt
   22    | for_stmt
   23    | while_stmt
   24    | do_stmt

   25 do_stmt: KW_DO simple_instructions KW_WHILE OPEN_PAR expr CLOSE_PAR erotimatiko

   26 while_stmt: KW_WHILE OPEN_PAR expr CLOSE_PAR simple_instructions

   27 for_stmt: KW_FOR OPEN_PAR assign_cmd erotimatiko expr erotimatiko assign_cmd CLOSE_PAR simple_instructions

   28 if_stmt: KW_IF OPEN_PAR expr CLOSE_PAR simple_instructions
   29        | KW_IF OPEN_PAR expr CLOSE_PAR simple_instructions KW_ELSE simple_instructions

   30 simple_instructions: cmd
   31                    | assign_cmd erotimatiko
   32                    | erotimatiko
   33                    | declarations
   34                    | KW_RETURN expr erotimatiko
   35                    | KW_CONT erotimatiko
   36                    | KW_BREAK erotimatiko
   37                    | KW_BEGIN ci KW_END
   38                    | call_function erotimatiko

   39 ci: complex_instractions
   40   | ci complex_instractions

   41 complex_instractions: cmd
   42                     | assign_cmd erotimatiko
   43                     | KW_RETURN expr erotimatiko
   44                     | erotimatiko
   45                     | declarations
   46                     | KW_CONT erotimatiko
   47                     | KW_BREAK erotimatiko
   48                     | KW_BEGIN complex_instractions KW_END
   49                     | call_function erotimatiko

   50 call_function: IDENTIFIERS OPEN_PAR call_function_parameters CLOSE_PAR
   51              | IDENTIFIERS OPEN_PAR CLOSE_PAR

   52 assign_cmd: IDENTIFIERS CLN EQUAL expr
   53           | type_of_values IDENTIFIERS CLN EQUAL expr
   54           | IDENTIFIERS Declare_Arrays CLN EQUAL expr

   55 function_parameters: type IDENTIFIERS
   56                    | function_parameters COMMA type IDENTIFIERS

   57 call_function_parameters: expr
   58                         | call_function_parameters COMMA IDENTIFIERS

   59 declarations: type list_var erotimatiko
   60             | KW_STATIC type list_var erotimatiko

   61 list_var: IDENTIFIERS give_value
   62         | IDENTIFIERS
   63         | list_var COMMA IDENTIFIERS give_value
   64         | list_var COMMA IDENTIFIERS
   65         | list_var COMMA IDENTIFIERS Declare_Arrays
   66         | IDENTIFIERS Declare_Arrays

   67 Declare_Arrays: OPEN_HK expr CLOSE_HK
   68               | Declare_Arrays OPEN_HK expr CLOSE_HK

   69 Declare_Arrays_expr: IDENTIFIERS Declare_Arrays

   70 give_value: CLN EQUAL type_of_values

   71 type_of_values: expr

   72 type: KW_INTEGER
   73     | KW_BOOLEAN
   74     | KW_CHAR
   75     | KW_REAL
   76     | KW_STRING
   77     | KW_VOID

   78 erotimatiko: KW_SEMICLN

   79 expr: INTEGERS
   80     | FLOATS
   81     | STRINGS
   82     | CHARACTER
   83     | IDENTIFIERS
   84     | KW_TRUE
   85     | KW_FALSE
   86     | call_function
   87     | Declare_Arrays_expr
   88     | OPEN_PAR expr CLOSE_PAR
   89     | expr KW_PLUS expr
   90     | KW_NOT expr
   91     | KW_NOTNOT expr
   92     | KW_SUB expr
   93     | KW_PLUS expr
   94     | expr KW_SUB expr
   95     | expr KW_AND expr
   96     | expr KW_MUL expr
   97     | expr KW_MOD expr
   98     | expr KW_DIV expr
   99     | expr EQUAL expr
  100     | expr KW_LESSTHAN expr
  101     | expr KW_GREATHAN expr
  102     | expr KW_LESSEQUAL expr
  103     | expr KW_GREATEREQUAL expr
  104     | expr KW_INEQ expr
  105     | expr KW_AMPERSANT expr


Terminals, with rules where they appear

$end (0) 0
error (256)
KW_TRUE (258) 84
KW_FALSE (259) 85
KW_STATIC (260) 60
KW_DO (261) 25
KW_IF (262) 28 29
KW_RETURN (263) 15 34 43
KW_BREAK (264) 17 36 47
KW_INTEGER (265) 72
KW_STRING (266) 76
KW_CONT (267) 16 35 46
KW_FOR (268) 27
KW_CHAR (269) 74
KW_VOID (270) 77
KW_ (271)
KW_REAL (272) 75
KW_WHILE (273) 25 26
KW_END (274) 6 7 8 9 18 37 48
KW_BEGIN (275) 6 7 8 9 18 37 48
KW_OR (276)
KW_SEMICLN (277) 78
COMMA (278) 56 58 63 64 65
OPEN_HK (279) 67 68
CLOSE_HK (280) 67 68
STRINGS (281) 81
CHARACTER (282) 82
IDENTIFIERS (283) 8 9 50 51 52 53 54 55 56 58 61 62 63 64 65 66 69
    83
INTEGERS (284) 79
FLOATS (285) 80
RD_STR (286)
RD_INT (287)
RD_REAL (288)
WR_STR (289)
WR_INT (290)
WR_REAL (291)
CLN (292) 52 53 54 70
KW_MAIN (293) 6 7
KW_PLUS (294) 89 93
KW_SUB (295) 92 94
KW_MUL (296) 96
KW_DIV (297) 98
KW_MOD (298) 97
KW_GREATEREQUAL (299) 103
KW_LESSEQUAL (300) 102
KW_GREATHAN (301) 101
KW_LESSTHAN (302) 100
KW_INEQ (303) 104
KW_AND (304) 95
KW_AMPERSANT (305) 105
KW_OROR (306)
KW_NOT (307) 90
KW_NOTNOT (308) 91
EQUAL (309) 52 53 54 70 99
KW_BOOLEAN (310) 73
OPEN_PAR (311) 6 7 8 9 25 26 27 28 29 50 51 88
CLOSE_PAR (312) 6 7 8 9 25 26 27 28 29 50 51 88
KW_ELSE (313) 29
"then" (314)
UMINUS (315)
UPLUS (316)
MINUS (317)
PLUS (318)
NOT (319)
FACTOR (320)
RELATION (321)
PAR_R (322)


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
programm (69)
    on left: 1 2, on right: 2 6
header (70)
    on left: 3, on right: 6 7
external_declaration (71)
    on left: 4 5, on right: 1 2
header_jobs (72)
    on left: 6 7, on right: 0
functions_declaration (73)
    on left: 8 9, on right: 4
code (74)
    on left: 10 11, on right: 6 7 8 9 11
instr (75)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
cmd (76)
    on left: 21 22 23 24, on right: 20 30 41
do_stmt (77)
    on left: 25, on right: 24
while_stmt (78)
    on left: 26, on right: 23
for_stmt (79)
    on left: 27, on right: 22
if_stmt (80)
    on left: 28 29, on right: 21
simple_instructions (81)
    on left: 30 31 32 33 34 35 36 37 38, on right: 25 26 27 28 29
ci (82)
    on left: 39 40, on right: 18 37 40
complex_instractions (83)
    on left: 41 42 43 44 45 46 47 48 49, on right: 39 40 48
call_function (84)
    on left: 50 51, on right: 19 38 49 86
assign_cmd (85)
    on left: 52 53 54, on right: 12 27 31 42
function_parameters (86)
    on left: 55 56, on right: 8 56
call_function_parameters (87)
    on left: 57 58, on right: 50 58
declarations (88)
    on left: 59 60, on right: 5 14 33 45
list_var (89)
    on left: 61 62 63 64 65 66, on right: 59 60 63 64 65
Declare_Arrays (90)
    on left: 67 68, on right: 54 65 66 68 69
Declare_Arrays_expr (91)
    on left: 69, on right: 87
give_value (92)
    on left: 70, on right: 61 63
type_of_values (93)
    on left: 71, on right: 53 70
type (94)
    on left: 72 73 74 75 76 77, on right: 8 9 55 56 59 60
erotimatiko (95)
    on left: 78, on right: 12 13 15 16 17 19 25 27 31 32 34 35 36 38
    42 43 44 46 47 49 59 60
expr (96)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102 103 104 105, on right: 15 25 26 27 28 29 34
    43 52 53 54 57 67 68 71 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105


State 0

    0 $accept: . header_jobs $end
    3 header: . %empty
    6 header_jobs: . header programm KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
    7            | . header KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END

    $default  reduce using rule 3 (header)

    header       go to state 1
    header_jobs  go to state 2


State 1

    1 programm: . external_declaration
    2         | . programm external_declaration
    4 external_declaration: . functions_declaration
    5                     | . declarations
    6 header_jobs: header . programm KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
    7            | header . KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
    8 functions_declaration: . type IDENTIFIERS OPEN_PAR function_parameters CLOSE_PAR KW_BEGIN code KW_END
    9                      | . type IDENTIFIERS OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
   59 declarations: . type list_var erotimatiko
   60             | . KW_STATIC type list_var erotimatiko
   72 type: . KW_INTEGER
   73     | . KW_BOOLEAN
   74     | . KW_CHAR
   75     | . KW_REAL
   76     | . KW_STRING
   77     | . KW_VOID

    KW_STATIC   shift, and go to state 3
    KW_INTEGER  shift, and go to state 4
    KW_STRING   shift, and go to state 5
    KW_CHAR     shift, and go to state 6
    KW_VOID     shift, and go to state 7
    KW_REAL     shift, and go to state 8
    KW_MAIN     shift, and go to state 9
    KW_BOOLEAN  shift, and go to state 10

    programm               go to state 11
    external_declaration   go to state 12
    functions_declaration  go to state 13
    declarations           go to state 14
    type                   go to state 15


State 2

    0 $accept: header_jobs . $end

    $end  shift, and go to state 16


State 3

   60 declarations: KW_STATIC . type list_var erotimatiko
   72 type: . KW_INTEGER
   73     | . KW_BOOLEAN
   74     | . KW_CHAR
   75     | . KW_REAL
   76     | . KW_STRING
   77     | . KW_VOID

    KW_INTEGER  shift, and go to state 4
    KW_STRING   shift, and go to state 5
    KW_CHAR     shift, and go to state 6
    KW_VOID     shift, and go to state 7
    KW_REAL     shift, and go to state 8
    KW_BOOLEAN  shift, and go to state 10

    type  go to state 17


State 4

   72 type: KW_INTEGER .

    $default  reduce using rule 72 (type)


State 5

   76 type: KW_STRING .

    $default  reduce using rule 76 (type)


State 6

   74 type: KW_CHAR .

    $default  reduce using rule 74 (type)


State 7

   77 type: KW_VOID .

    $default  reduce using rule 77 (type)


State 8

   75 type: KW_REAL .

    $default  reduce using rule 75 (type)


State 9

    7 header_jobs: header KW_MAIN . OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END

    OPEN_PAR  shift, and go to state 18


State 10

   73 type: KW_BOOLEAN .

    $default  reduce using rule 73 (type)


State 11

    2 programm: programm . external_declaration
    4 external_declaration: . functions_declaration
    5                     | . declarations
    6 header_jobs: header programm . KW_MAIN OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
    8 functions_declaration: . type IDENTIFIERS OPEN_PAR function_parameters CLOSE_PAR KW_BEGIN code KW_END
    9                      | . type IDENTIFIERS OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
   59 declarations: . type list_var erotimatiko
   60             | . KW_STATIC type list_var erotimatiko
   72 type: . KW_INTEGER
   73     | . KW_BOOLEAN
   74     | . KW_CHAR
   75     | . KW_REAL
   76     | . KW_STRING
   77     | . KW_VOID

    KW_STATIC   shift, and go to state 3
    KW_INTEGER  shift, and go to state 4
    KW_STRING   shift, and go to state 5
    KW_CHAR     shift, and go to state 6
    KW_VOID     shift, and go to state 7
    KW_REAL     shift, and go to state 8
    KW_MAIN     shift, and go to state 19
    KW_BOOLEAN  shift, and go to state 10

    external_declaration   go to state 20
    functions_declaration  go to state 13
    declarations           go to state 14
    type                   go to state 15


State 12

    1 programm: external_declaration .

    $default  reduce using rule 1 (programm)


State 13

    4 external_declaration: functions_declaration .

    $default  reduce using rule 4 (external_declaration)


State 14

    5 external_declaration: declarations .

    $default  reduce using rule 5 (external_declaration)


State 15

    8 functions_declaration: type . IDENTIFIERS OPEN_PAR function_parameters CLOSE_PAR KW_BEGIN code KW_END
    9                      | type . IDENTIFIERS OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
   59 declarations: type . list_var erotimatiko
   61 list_var: . IDENTIFIERS give_value
   62         | . IDENTIFIERS
   63         | . list_var COMMA IDENTIFIERS give_value
   64         | . list_var COMMA IDENTIFIERS
   65         | . list_var COMMA IDENTIFIERS Declare_Arrays
   66         | . IDENTIFIERS Declare_Arrays

    IDENTIFIERS  shift, and go to state 21

    list_var  go to state 22


State 16

    0 $accept: header_jobs $end .

    $default  accept


State 17

   60 declarations: KW_STATIC type . list_var erotimatiko
   61 list_var: . IDENTIFIERS give_value
   62         | . IDENTIFIERS
   63         | . list_var COMMA IDENTIFIERS give_value
   64         | . list_var COMMA IDENTIFIERS
   65         | . list_var COMMA IDENTIFIERS Declare_Arrays
   66         | . IDENTIFIERS Declare_Arrays

    IDENTIFIERS  shift, and go to state 23

    list_var  go to state 24


State 18

    7 header_jobs: header KW_MAIN OPEN_PAR . CLOSE_PAR KW_BEGIN code KW_END

    CLOSE_PAR  shift, and go to state 25


State 19

    6 header_jobs: header programm KW_MAIN . OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END

    OPEN_PAR  shift, and go to state 26


State 20

    2 programm: programm external_declaration .

    $default  reduce using rule 2 (programm)


State 21

    8 functions_declaration: type IDENTIFIERS . OPEN_PAR function_parameters CLOSE_PAR KW_BEGIN code KW_END
    9                      | type IDENTIFIERS . OPEN_PAR CLOSE_PAR KW_BEGIN code KW_END
   61 list_var: IDENTIFIERS . give_value
   62         | IDENTIFIERS .  [KW_SEMICLN, COMMA]
   66         | IDENTIFIERS . Declare_Arrays
   67 Declare_Arrays: . OPEN_HK expr CLOSE_HK
   68               | . Declare_Arrays OPEN_HK expr CLOSE_HK
   70 give_value: . CLN EQUAL type_of_values

    OPEN_HK   shift, and go to state 27
    CLN       shift, and go to state 28
    OPEN_PAR  shift, and go to state 29

    $default  reduce using rule 62 (list_var)

    Declare_Arrays  go to state 30
    give_value      go to state 31


State 22

   59 declarations: type list_var . erotimatiko
   63 list_var: list_var . COMMA IDENTIFIERS give_value
   64         | list_var . COMMA IDENTIFIERS
   65         | list_var . COMMA IDENTIFIERS Declare_Arrays
   78 erotimatiko: . KW_SEMICLN

    KW_SEMICLN  shift, and go to state 32
    COMMA       shift, and go to state 33

    erotimatiko  go to state 34


State 23

   61 list_var: IDENTIFIERS . give_value
   62         | IDENTIFIERS .  [KW_SEMICLN, COMMA]
   66         | IDENTIFIERS . Declare_Arrays
   67 Declare_Arrays: . OPEN_HK expr CLOSE_HK
   68               | . Declare_Arrays OPEN_HK expr CLOSE_HK
   70 give_value: . CLN EQUAL type_of_values

    OPEN_HK  shift, and go to state 27
    CLN      shift, and go to state 28

    $default  reduce using rule 62 (list_var)

    Declare_Arrays  go to state 30
    give_value      go to state 31


State 24

   60 declarations: KW_STATIC type list_var . erotimatiko
   63 list_var: list_var . COMMA IDENTIFIERS give_value
   64         | list_var . COMMA IDENTIFIERS
   65         | list_var . COMMA IDENTIFIERS Declare_Arrays
   78 erotimatiko: . KW_SEMICLN

    KW_SEMICLN  shift, and go to state 32
    COMMA       shift, and go to state 33

    erotimatiko  go to state 35


State 25

    7 header_jobs: header KW_MAIN OPEN_PAR CLOSE_PAR . KW_BEGIN code KW_END

    KW_BEGIN  shift, and go to state 36


State 26

    6 header_jobs: header programm KW_MAIN OPEN_PAR . CLOSE_PAR KW_BEGIN code KW_END

    CLOSE_PAR  shift, and go to state 37


State 27

   50 call_function: . IDENTIFIERS OPEN_PAR call_function_parameters CLOSE_PAR
   51              | . IDENTIFIERS OPEN_PAR CLOSE_PAR
   67 Declare_Arrays: OPEN_HK . expr CLOSE_HK
   69 Declare_Arrays_expr: . IDENTIFIERS Declare_Arrays
   79 expr: . INTEGERS
   80     | . FLOATS
   81     | . STRINGS
   82     | . CHARACTER
   83     | . IDENTIFIERS
   84     | . KW_TRUE
   85     | . KW_FALSE
   86     | . call_function
   87     | . Declare_Arrays_expr
   88     | . OPEN_PAR expr CLOSE_PAR
   89     | . expr KW_PLUS expr
   90     | . KW_NOT expr
   91     | . KW_NOTNOT expr
   92     | . KW_SUB expr
   93     | . KW_PLUS expr
   94     | . expr KW_SUB expr
   95     | . expr KW_AND expr
   96     | . expr KW_MUL expr
   97     | . expr KW_MOD expr
   98     | . expr KW_DIV expr
   99     | . expr EQUAL expr
  100     | . expr KW_LESSTHAN expr
  101     | . expr KW_GREATHAN expr
  102     | . expr KW_LESSEQUAL expr
  103     | . expr KW_GREATEREQUAL expr
  104     | . expr KW_INEQ expr
  105     | . expr KW_AMPERSANT expr

    KW_TRUE      shift, and go to state 38
    KW_FALSE     shift, and go to state 39
    STRINGS      shift, and go to state 40
    CHARACTER    shift, and go to state 41
    IDENTIFIERS  shift, and go to state 42
    INTEGERS     shift, and go to state 43
    FLOATS       shift, and go to state 44
    KW_PLUS      shift, and go to state 45
    KW_SUB       shift, and go to state 46
    KW_NOT       shift, and go to state 47
    KW_NOTNOT    shift, and go to state 48
    OPEN_PAR     shift, and go to state 49

    call_function        go to state 50
    Declare_Arrays_expr  go to state 51
    expr                 go to state 52


State 28

   70 give_value: CLN . EQUAL type_of_values

    EQUAL  shift, and go to state 53


State 29

    8 functions_declaration: type IDENTIFIERS OPEN_PAR . function_parameters CLOSE_PAR KW_BEGIN code KW_END
    9                      | type IDENTIFIERS OPEN_PAR . CLOSE_PAR KW_BEGIN code KW_END
   55 function_parameters: . type IDENTIFIERS
   56                    | . function_parameters COMMA type IDENTIFIERS
   72 type: . KW_INTEGER
   73     | . KW_BOOLEAN
   74     | . KW_CHAR
   75     | . KW_REAL
   76     | . KW_STRING
   77     | . KW_VOID
